--- a/18.08.14.md
+++ b/18.08.14.md
@@ -1,5 +1,5 @@
-#markdown my day motion
-today I had same thing lists below
-#1 : DDR3/L have no progress
-#2 : we have a plane with the machine vision
-#3 : I have a lot of worry about my body ,pray its ok
+# markdown my day motion
+ today I had same thing lists below
+- 1 : DDR3/L have no progress
+- 2 : we have a plane with the machine vision
+- 3 : I have a lot of worry about my body ,pray its ok
