--- a/18.08.14.md
+++ b/18.08.14.md
@@ -1,5 +1,23 @@
 # markdown my day motion
  today I had same thing lists below
 - 1 : DDR3/L have no progress
-- 2 : we have a plane with the machine vision
+- 2 : we have a plan with the machine vision
 - 3 : I have a lot of worry about my body ,pray its ok
+
+```
+gantt
+        dateFormat  YYYY-MM-DD
+        title Adding GANTT diagram functionality to mermaid
+        section A section
+        Completed task            :done,    des1, 2014-01-06,2014-01-08
+        Active task               :active,  des2, 2014-01-09, 3d
+        Future task               :         des3, after des2, 5d
+        Future task2               :         des4, after des3, 5d
+        section Critical tasks
+        Completed task in the critical line :crit, done, 2014-01-06,24h
+        Implement parser and jison          :crit, done, after des1, 2d
+        Create tests for parser             :crit, active, 3d
+        Future task in critical line        :crit, 5d
+        Create tests for renderer           :2d
+        Add to mermaid                      :1d
+```
