--- a/18.08.14.md
+++ b/18.08.14.md
@@ -21,3 +21,9 @@ gantt
         Create tests for renderer           :2d
         Add to mermaid                      :1d
 ```
+graph TD
+A[Christmas] -->|Get money| B(Go shopping)
+B --> C{Let me think}
+C -->|One| D[Laptop]
+C -->|Two| E[iPhone]
+C -->|Three| F[fa:fa-car Car]
