--- a/18.08.24.md
+++ b/18.08.24.md
@@ -4,5 +4,6 @@
 - 2 : have a bad sleep 
 - 3 : I need to sleep earlier and get up earlier
 - 4 : yesterday I read a novel neamed &laquo;death lection &raquo; live like a dog if weak,get up when strong,
-    <br> &emsp;_**hide hide hide**_ is the very first law
+    <br> &emsp;_**hide hide hide**_ is the very first law 
+    <br> &emsp;_**kill yourself**_ is the very first law too
 - 5 : stop read it and get up to work !
