--- a/18.08.24.md
+++ b/18.08.24.md
@@ -7,3 +7,4 @@
     <br> &emsp;_**hide hide hide**_ is the very first law 
     <br> &emsp;_**kill yourself**_ is the very first law too
 - 5 : stop read it and get up to work !
+- 6 : oneday as a slave,whole life as a slave,if the heart is a slave too
